[package]
name = "bancho-packet"
description = "Library for handling osu!'s packets" 
version = "0.2.0"
edition = "2021"
readme = "README.md"
license = "GPL-3.0"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"